# claudec99

./: .gitignore  CMakeLists.txt  Claude.md  README.md  build.sh  clean.sh
.claude/: settings.json
.claude/agents/: haiku-stage-artifact-writer.md
cc99_testing/: test_o1_state_machine_switch.c
demos/: .gitignore  build_sdl2_demo.sh  hello.c  non-constant-initializer-for-global.c  null_test.c  pong.c  sdl2_demo.c  test_sdl2_init.c  zlib_test.c
demos/sdl_plot/: CMakeLists.txt
docs/: checklist.md  fixed-capacity-inventory.md  grammar.md  self-compilation-report.md
docs/defects/: CC99_FIX_REPORT-01.md  CC99_FIX_REPORT-02.md  ClaudeC99-defect-1-use-human-readable-token-names-instead-of-numerical-codes-in-error-message.md  defect-1-export.md  legacy-project-test-failure-report.md
docs/kickoffs/: stage-00-98-kickoff.md  stage-01-clarifications.md  stage-03-kickoff.md  stage-05-kickoff.md  stage-05-tokenizer-proposed-changes-summary.md  stage-06-initial-response.md  stage-07-04-kickoff.md  stage-08-01-kickoff.md  stage-08-02-kickoff.md  stage-09-02-kickoff.md  stage-09-03-kickoff.md  stage-09-04-kickoff.md  stage-09-05-kickoff.md  stage-10-01-kickoff.md  (+254 more)
include/: ast.h  ast_pretty_printer.h  codegen.h  constants.h  lexer.h  optimize.h  parser.h  peephole.h  preprocessor.h  strbuf.h  token.h  type.h  util.h  vec.h  version.h
src/: ast.c  ast_pretty_printer.c  codegen.c  compiler.c  lexer.c  optimize.c  parser.c  peephole.c  preprocessor.c  strbuf.c  type.c  util.c  vec.c  version.c
status/: project-features-throgh-stage-12-04.md  project-features-through-stage-100.md  project-features-through-stage-101.md  project-features-through-stage-102.md  project-features-through-stage-103.md  project-features-through-stage-104.md  project-features-through-stage-105.md  project-features-through-stage-106.md  project-features-through-stage-107.md  project-features-through-stage-108.md  project-features-through-stage-109.md  project-features-through-stage-110.md  project-features-through-stage-111.md  project-features-through-stage-112.md  project-features-through-stage-116.md  project-features-through-stage-117.md  project-features-through-stage-119.md  project-features-through-stage-122.md  project-features-through-stage-125.md  project-features-through-stage-130.md  project-features-through-stage-133.md  project-features-through-stage-134.md  project-features-through-stage-138.md  project-features-through-stage-15-04.md  project-features-through-stage-20-03.md  project-features-through-stage-39.md  project-features-through-stage-57-04.md  project-features-through-stage-65.md  project-features-through-stage-75-06.md  project-features-through-stage-91.md  project-features-through-stage-93.md  project-features-through-stage-95-11.md  project-features-through-stage-95-12.md  project-features-through-stage-96.md  project-features-through-stage-97.md  project-features-through-stage-98.md  project-features-through-stage-99.md  project-status-through-stage-100.md  project-status-through-stage-101.md  project-status-through-stage-102.md  (+34 more)
test/: run_all_tests.sh  run_test.sh  run_tests.sh  test_add__42.c  test_compound_equality_true__1.c  test_eq_true__1.c  test_expr_eq_true__1.c  test_expr_lt_true__1.c  test_ge_false__0.c  test_ge_true__1.c  test_gt_false__0.c  test_if_else_block__42.c  test_if_with_else_block__42.c  test_le_false__0.c  test_le_true__1.c  test_lt_false__0.c  test_paren__42.c
(+3575 files in other folders)
